unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Put_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Bill_Put_On_Hold__c</fullName>
    <label>Bill Put On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>