unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Bill_Put_on_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bill_Put_on_Hold_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Put on Hold Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>