unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Complete_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Complete_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Complete Review Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>