unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Mode_Structure__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode_Structure__c</fullName>
    <label>Billing Mode &amp; Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>