unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Mode_Structure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode_Structure_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Mode &amp; Structure Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>