unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Payer_Scheduler_comments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Payer_Scheduler_comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Payer/Scheduler comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>