unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Payer_Scheduler_Correct__c.field-meta.xml
<CustomField>
    <fullName>Billing_Payer_Scheduler_Correct__c</fullName>
    <label>Billing Payer/Scheduler Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>