unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Billing_Specialist_Points_Missed__c.field-meta.xml
<CustomField>
    <fullName>Billing_Specialist_Points_Missed__c</fullName>
    <formula>IF (Text( Case_Notes_are_clearly_documented__c ) = &quot;No&quot;,1,0) +
IF (Text( Case_Detail_Populated_Correctly__c ) = &quot;No&quot;,0.5,0) +
IF (Text( Positive_Tone_in_Response__c ) = &quot;No&quot;,1,0) +
IF (Text( Utilized_Correct_Grammer__c ) = &quot;No&quot;,1,0) +
IF (Text( Unread_Emails_Closed_Or_Replied_SLA__c ) = &quot;No&quot;,0.5,0) +
IF (Text( System_Work_Accurately_Completed__c ) = &quot;No&quot;,1,0) +
IF (Text( Notes_added_to_CSW_and_or_LifePRO__c ) = &quot;No&quot;,1,0) +
IF (Text( Communication_to_Appropriate_Contacts__c ) = &quot;No&quot;,1,0) +
IF (Text( Partner_Case_Replied_Within_SLA__c ) = &quot;No&quot;,1,0) +
IF (Text( Claims_Case_Replied_within_SLA__c ) = &quot;No&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Specialist Points Missed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>