unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/BS_Class_Name_Comments__c.field-meta.xml
<CustomField>
    <fullName>BS_Class_Name_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BS - Class Name Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>