unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/BS_Disability_Benefits_Comments__c.field-meta.xml
<CustomField>
    <fullName>BS_Disability_Benefits_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BS - Disability Benefits Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>