unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/BS_Life_Benefits__c.field-meta.xml
<CustomField>
    <fullName>BS_Life_Benefits__c</fullName>
    <label>BS - Life Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>