unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/BS_Third_Party_Services__c.field-meta.xml
<CustomField>
    <fullName>BS_Third_Party_Services__c</fullName>
    <label>BS - Third Party Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>