unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/BS_Third_Party_Services_Comments__c.field-meta.xml
<CustomField>
    <fullName>BS_Third_Party_Services_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BS - Third Party Services Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>