unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Burn_Only_Used_Comments__c.field-meta.xml
<CustomField>
    <fullName>Burn_Only_Used_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Burn Only Used Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>