unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Burn_Only_Used_When_Required__c.field-meta.xml
<CustomField>
    <fullName>Burn_Only_Used_When_Required__c</fullName>
    <label>Burn Only Used When Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>