unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Call_Agenda_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Agenda_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Agenda Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>