unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Call_Agenda_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Agenda_Completed__c</fullName>
    <label>Call Agenda Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>