unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>QA Scorecards</relationshipLabel>
    <relationshipName>QA_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>