unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Build_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Build_Total_Score__c</fullName>
    <formula>IF ( Clean_Enrollment_Experience__c , 20 , 0 )+
IF ( Clean_Post_Enrollment__c , 30 , 0 )+
IF ( Enrollment_Issue_1__c , -5 , 0 )+
IF ( Enrollment_Issue_2__c , -5 , 0 )+
IF ( Enrollment_Issue_3__c , -5 , 0 )+
IF ( Enrollment_Issue_4__c, -5 , 0 )+
IF ( Enrollment_Issue_5__c, -5 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Build Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>