unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Created_for_Central_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_for_Central_Record__c</fullName>
    <label>Case Created for Central Record &amp; Claims</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>