unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Created_For_Central_Records__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_For_Central_Records__c</fullName>
    <label>Case Created For Central Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>