unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Detail_Populated_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail_Populated_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Detail Populated Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>