unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Detail_Populated_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail_Populated_Correctly__c</fullName>
    <inlineHelpText>Were case details populated correctly and on the same day</inlineHelpText>
    <label>Case Detail Populated Correctly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>