unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Detail_Updated_in_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail_Updated_in_24_hours__c</fullName>
    <label>Case Detail Updated in 24 hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>