unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_for_Central_Records_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_for_Central_Records_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case for Central Records &amp;ClaimsComments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>