unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Notes_are_clearly_documented__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_are_clearly_documented__c</fullName>
    <label>Case Notes are clearly documented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>