unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Notes_as_to_What_Was_Processed__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_as_to_What_Was_Processed__c</fullName>
    <label>Case Notes as to What Was Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>