unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Notes Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>