unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>Case__r.Case_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>