unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Reviewed_Timely_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Reviewed_Timely_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Reviewed Timely Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>