unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Case_Testing_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Testing_Total_Score__c</fullName>
    <formula>IF ( Test_Plan_Documented__c , 25, 0)+
IF ( Application_Election_Form_New_Hire__c , 25, 0)+
IF ( Application_Election_Form_Existing_Empl__c , 25, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Testing Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>