unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CDF_Sent_Comments__c.field-meta.xml
<CustomField>
    <fullName>CDF_Sent_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CDF Sent Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>