unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/CDF_Sent_Within_24_hours_All_Products__c.field-meta.xml
<CustomField>
    <fullName>CDF_Sent_Within_24_hours_All_Products__c</fullName>
    <label>CDF Sent Within 24 hours, All Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>