unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Cells_Added_Removed__c.field-meta.xml
<CustomField>
    <fullName>Cells_Added_Removed__c</fullName>
    <label>Cells Added/Removed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>