unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Cells_Added_Removed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cells_Added_Removed_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cells Added/Removed Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>