unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Census_Validation__c.field-meta.xml
<CustomField>
    <fullName>Census_Validation__c</fullName>
    <label>Census Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>