unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Census_Validation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Census_Validation_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census Validation Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>