unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Certificate_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Effective_Date__c</fullName>
    <label>Certificate Effective Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>