unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Certificate_Effective_Date_Comment__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Effective_Date_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certificate Effective Date Comment</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>