unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Child_Case__c.field-meta.xml
<CustomField>
    <fullName>Child_Case__c</fullName>
    <label>Child Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>