unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Child_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Child Case Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>