unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Child_Case_what_ServiceIntake_Can_t_Do__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_what_ServiceIntake_Can_t_Do__c</fullName>
    <label>Child Case what ServiceIntake Can&#39;t Do</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>