unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Claim_Setup_Points_Missed__c.field-meta.xml
<CustomField>
    <fullName>Claim_Setup_Points_Missed__c</fullName>
    <formula>IF (Text( Completed_Within_SLA_Guidelines__c ) = &quot;No&quot;,15,0) + 
IF (Text( Requested_Paid_to_Date_and_BCBS__c ) = &quot;No&quot;,3,0) + 
IF (Text(  Native_System_Work_Correct__c  ) = &quot;No&quot;,15,0) + 
IF (Text(   Native_System_Work_Correct_No_Affect_Pro__c   ) = &quot;No&quot;,5,0) + 
IF (Text( Notes_In_CSW__c) = &quot;No&quot;,3,0) + 
IF (Text(  Salesforce_Setup_and_System_Note__c ) = &quot;No&quot;,1,0) +
IF (Text(   All_Holds_Removed__c ) = &quot;No&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Setup Points Missed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>