unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Claims_Case_Replied_Comments__c.field-meta.xml
<CustomField>
    <fullName>Claims_Case_Replied_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claims Case Replied Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>