unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Claims_Case_Replied_within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Claims_Case_Replied_within_SLA__c</fullName>
    <label>Claims Case Replied within SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>