unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Claims_Setup_Points_From_Burn__c.field-meta.xml
<CustomField>
    <fullName>Claims_Setup_Points_From_Burn__c</fullName>
    <formula>IF (Text( Completed_Within_SLA_Guidelines__c ) = &quot;Burn&quot;,15,0) + 
IF (Text( Requested_Paid_to_Date_and_BCBS__c ) = &quot;Burn&quot;,3,0) + 
IF (Text(  Native_System_Work_Correct__c  ) = &quot;Burn&quot;,15,0) + 
IF (Text(   Native_System_Work_Correct_No_Affect_Pro__c   ) = &quot;Burn&quot;,5,0) + 
IF (Text( Notes_In_CSW__c) = &quot;Burn&quot;,3,0) + 
IF (Text(  Salesforce_Setup_and_System_Note__c ) = &quot;Burn&quot;,1,0) +
IF (Text(   All_Holds_Removed__c ) = &quot;Burn&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claims Setup Points From Burn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>