unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Class_Description_Correct__c.field-meta.xml
<CustomField>
    <fullName>Class_Description_Correct__c</fullName>
    <label>Class Description Correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>