unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Class_Level_Options_Comments__c.field-meta.xml
<CustomField>
    <fullName>Class_Level_Options_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Level Options Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>