unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Classes_Copied_Comments__c.field-meta.xml
<CustomField>
    <fullName>Classes_Copied_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Classes Copied Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>