unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Classes_copied_with_correct_date_benfits__c.field-meta.xml
<CustomField>
    <fullName>Classes_copied_with_correct_date_benfits__c</fullName>
    <label>Classes Copied With Correct Date/Benfits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>