unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Enrollment_Exp_Comments__c.field-meta.xml
<CustomField>
    <fullName>Clean_Enrollment_Exp_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clean Enrollment Exp Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>