unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Enrollment_Exp_Score__c.field-meta.xml
<CustomField>
    <fullName>Clean_Enrollment_Exp_Score__c</fullName>
    <description>IF ( Clean_Enrollment_Experience__c = true,20,0) into this field</description>
    <formula>IF ( Clean_Enrollment_Experience__c = true,20,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Enrollment Exp Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>