unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Enrollment_Experience__c.field-meta.xml
<CustomField>
    <fullName>Clean_Enrollment_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked show 20 in Score column</description>
    <label>Clean Enrollment Experience</label>
    <type>Checkbox</type>
</CustomField>