unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Post_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Clean_Post_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked add 30 to the Score column</description>
    <label>Clean Post-Enrollment</label>
    <type>Checkbox</type>
</CustomField>