unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Post_Enrollment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Clean_Post_Enrollment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clean Post-Enrollment Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>