unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Clean_Post_Enrollment_Score__c.field-meta.xml
<CustomField>
    <fullName>Clean_Post_Enrollment_Score__c</fullName>
    <formula>IF (  Clean_Post_Enrollment__c = true,30,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Post-Enrollment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>