unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Closed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closed_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>