unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Closed_Issued_Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed_Issued_Closed__c</fullName>
    <label>Closed Issued &amp; Closed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>