unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Collaborated_w_Internal_Teams__c.field-meta.xml
<CustomField>
    <fullName>Collaborated_w_Internal_Teams__c</fullName>
    <label>Collaborated w Internal Teams?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>