unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>