unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Communication_Expectations_Partner__c.field-meta.xml
<CustomField>
    <fullName>Communication_Expectations_Partner__c</fullName>
    <label>Communication Expectations Partner/Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>