unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Communication_Expectations_PSS__c.field-meta.xml
<CustomField>
    <fullName>Communication_Expectations_PSS__c</fullName>
    <label>Communication Expectations - PSS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_QA_Picklist</valueSetName>
    </valueSet>
</CustomField>