unpackaged/main/default/objects/PS_QA_Scorecard__c/fields/Communication_Expectations_PSS_Comments__c.field-meta.xml
<CustomField>
    <fullName>Communication_Expectations_PSS_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Expectations -PSS Comments</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>